Fix line breaks in chapter titles

--- a/book.tex
+++ b/book.tex
@@ -43,7 +43,7 @@
 %------------------------------------------------------------------------------
 % For testing, uncomment
 
-%\fenicsinput{selim}
+%\fenicsinput{oelgaard-2}
 %\input{backmatter/authors}
 %\bibliography{bibliography}\bibliographystyle{abbrvnat}\end{fullwidth}\end{document}
 
