--- a/unfinished/tmp-oelgaard-1/chapter.tex
+++ b/unfinished/tmp-oelgaard-1/chapter.tex
@@ -1,5 +1,5 @@
-\fenicschapter{Applications in Solid Mechanics}
-              {Applications in Solid Mechanics}
+\fenicschapter{Applications in solid mechanics}
+              {Applications in solid mechanics}
               {Kristian B. {\O}lgaard and Garth N. Wells}
               {oelgaard-1}
 
