--- a/bibliography.bib
+++ b/bibliography.bib
@@ -4468,8 +4468,8 @@ year = "2006"
 
 @ARTICLE{JohnKnobloch2007,
   author = {Volker John and Petr Knobloch},
-  title = {On spurious oscillations at layers diminishing (SOLD) methods for
-	convection-diffusion equations: Part I - A review},
+  title = {On spurious oscillations at layers diminishing ({SOLD}) methods for
+	convection-diffusion equations: {P}art - {A} review},
   journal = {Computer Methods in Applied Mechanics and Engineering},
   year = {2007},
   volume = {196},
@@ -4624,12 +4624,17 @@ year = "2006"
   pages = {916--919}
 }
 
-@UNPUBLISHED{Kirby,
-  author = {Robert C. Kirby},
-  title = {Singularity-free evaluation of collapsed-coordinate orthogonal polynomials},
-  note = {submitted to \emph{ACM Trans. Math. Software}},
-  owner = {logg},
-  timestamp = {2009.06.07}
+@article{Kirby,
+ author = {Kirby, Robert C.},
+ title = {Singularity-free evaluation of collapsed-coordinate orthogonal polynomials},
+ journal = {ACM Trans. Math. Softw.},
+ volume = {37},
+ issue = {1},
+ year = {2010},
+ pages = {5:1--5:16},
+ articleno = {5},
+ numpages = {16},
+ url = {http://dx.doi.org/10.1145/1644001.1644006},
 }
 
 @UNPUBLISHED{Kirbya,
@@ -4649,15 +4654,6 @@ year = "2006"
   url = {http://www.fenics.org/fiat/}
 }
 
-@ARTICLE{Kirby2006a,
-  author = {R. C. Kirby},
-  title = {Optimizing {FIAT} with the Level 3 {BLAS}},
-  journal = {to appear in ACM Trans. Math. Software},
-  year = {2006},
-  owner = {logg},
-  timestamp = {2009.06.06}
-}
-
 @ARTICLE{Kirby2011,
   author = {R. C. Kirby},
   title = {Fast simplicial finite element algorithms using Bernstein polynomials},
@@ -4674,39 +4670,28 @@ year = "2006"
   year = {2010},
 }
 
-@ARTICLE{Kirby2006d,
-  author = {Robert C. Kirby},
-  title = {Optimizing {FIAT} with level 3 {BLAS}},
-  journal = {ACM Trans. Math. Softw.},
-  year = {2006},
-  volume = {32},
-  pages = {223--235},
-  number = {2},
-  url = {http://dx.doi.org/10.1145/1141885.1141889},
+@ARTICLE{Kirby2006a,
+ author = {Kirby, Robert C.},
+ title = {Optimizing {FIAT} with level 3 {BLAS}},
+ journal = {ACM Trans. Math. Softw.},
+ volume = {32},
+ issue = {2},
+ year = {2006},
+ pages = {223--235},
+ numpages = {13},
+ url = {http://dx.doi.org/10.1145/1141885.1141889},
 }
 
 @ARTICLE{Kirby2004,
-  author = {R. C. Kirby},
-  title = {{FIAT}: A New Paradigm for Computing Finite Element Basis Functions},
-  journal = {ACM Trans. Math. Software},
-  year = {2004},
-  volume = {30},
-  pages = {502--516},
-  owner = {logg},
-  timestamp = {2009.06.06}
-}
-
-@ARTICLE{Kirby2004a,
-  author = {R. C. Kirby},
-  title = {Algorithm 839: {FIAT}, a new paradigm for computing finite element
-	basis functions},
-  journal = {ACM Trans. Math. Software},
-  year = {2004},
-  volume = {30},
-  pages = {502--516},
-  number = {4},
-  owner = {kent-and},
-  timestamp = {2009.06.08}
+ author = {Kirby, Robert C.},
+ title = {Algorithm 839: {FIAT}, a new paradigm for computing finite element basis functions},
+ journal = {ACM Trans. Math. Softw.},
+ volume = {30},
+ issue = {4},
+ year = {2004},
+ pages = {502--516},
+ numpages = {15},
+ url = {http://dx.doi.org/10.1145/1039813.1039820},
 }
 
 @ARTICLE{KirbyKnepleyLoggEtAl2005,
@@ -4754,24 +4739,26 @@ year = "2006"
 }
 
 @ARTICLE{KirbyLogg2006,
-  author = {Robert C. Kirby and Anders Logg},
-  title = {A Compiler for Variational Forms},
-  journal = {ACM Transactions on Mathematical Software},
-  year = {2006},
-  volume = {32},
-  pages = {417--444},
-  number = {3},
+ author = {Kirby, Robert C. and Logg, Anders},
+ title = {A compiler for variational forms},
+ journal = {ACM Trans. Math. Softw.},
+ volume = {32},
+ issue = {3},
+ year = {2006},
+ pages = {417--444},
+ numpages = {28},
+ url = {http://dx.doi.org/10.1145/1163641.1163644},
 }
 
 @ARTICLE{KirbyLoggScottEtAl2006,
-  author = {Robert C. Kirby and Anders Logg and L. Ridgway Scott and Andy R.
-	Terrel},
-  title = {Topological Optimization of the Evaluation of Finite Element Matrices},
-  journal = {SIAM J. Sci. Comput.},
-  year = {2006},
-  volume = {28},
-  pages = {224--240},
-  number = {1},
+author = {Robert C. Kirby and Anders Logg and L. Ridgway Scott and Andy R. Terrel},
+title = {Topological Optimization of the Evaluation of Finite Element Matrices},
+year = {2006},
+journal = {SIAM Journal on Scientific Computing},
+volume = {28},
+number = {1},
+pages = {224-240},
+url = {http://dx.doi.org/10.1137/050635547}
 }
 
 @ARTICLE{KirbyScott2007,
