added Svein, Emil, and Susanne.

--- a/backmatter/authors.tex
+++ b/backmatter/authors.tex
@@ -1,4 +1,4 @@
-\chapter*{List of Authors}
+
 
 \emph{The following authors have contributed to this book.}
 
@@ -123,7 +123,14 @@
               Computing, South Africa as part of a flagship project.}
               {Chapter \ref{chap:lezar}}
 
-\fenicsauthor{Svein Linge}{}{}{}{}
+\fenicsauthor{Svein Linge}
+             {sveinlin@simula.no}
+             {Telemark University College and the Center for Biomedical Computing at Simula Research Laboratory, Norway}
+             {This work is supported by a Center of Excellence
+              grant from the Research Council of Norway to the Center
+              for Biomedical Computing at Simula Research
+              Laboratory.}
+             {Chapter \ref{chap:hentschel}}
 
 \fenicsauthor{Anders Logg}
              {logg@simula.no}
@@ -151,7 +158,14 @@
               {This work is supported by ISEL, Instituto Superior de Engenharia de Lisboa.}
               {Chapter \ref{chap:lopes}}
 
-\fenicsauthor{Alf Emil L\o{}vgren}{}{}{}{}
+\fenicsauthor{Alf Emil L\o{}vgren}
+             {emil@nofas.no}
+             {Nofas Management AS, Norway}
+             {This work is supported by a Center of Excellence
+              grant from the Research Council of Norway to the Center
+              for Biomedical Computing at Simula Research
+              Laboratory.}
+             {Chapter \ref{chap:hentschel}}
 
 \fenicsauthor{Kent-Andre Mardal}
              {kent-and@simula.no}
@@ -255,7 +269,17 @@
               Laboratory.}
              {Chapter \ref{chap:selim}}
 
-\fenicsauthor{Susanne St\o{}le-Hentschel}{}{}{}{}
+\fenicsauthor{Susanne St\o{}le-Hentschel}
+             {susanne.stole.hentschel@dnv.com} 
+             {Det Norske Veritas AS}  
+             {This work is supported by a Center of Excellence
+              grant from the Research Council of Norway to the Center
+              for Biomedical Computing at Simula Research
+              Laboratory.}
+             {Chapter \ref{chap:hentschel}}
+
+
+
 
 \fenicsauthor{Andy R. Terrel}
              {andy.terrel@gmail.com}
