--- a/bibliography.bib
+++ b/bibliography.bib
@@ -11,7 +11,7 @@
 @ARTICLE{SelimLogg2011b,
   author = {K. Selim and A. Logg and M. G. Larson},
   title = {An Adaptive Finite Element Splitting Method for the Incompressible
-        Navier--Stokes Equations},
+        {N}avier--{S}tokes Equations},
   journal = {submitted to journal},
   year = {2011}
 }
@@ -804,13 +804,13 @@ url={http://chinacat.coastal.udel.edu/programs/funwave/funwave.html}
 @ARTICLE{Bansch1991,
   author = {B\"{a}nsch, Eberhard},
   title = {An adaptive finite-element strategy for the three-dimensional time-dependent
-	Navier-Stokes equations},
+	{N}avier--{S}tokes equations},
   journal = {J. Comput. Appl. Math.},
   year = {1991},
   volume = {36},
   pages = {3--28},
   number = {1},
-  address = {Amsterdam, The Netherlands, The Netherlands},
+  address = {Amsterdam},
   url = {http://dx.doi.org/10.1016/0377-0427(91)90224-8}
 }
 
@@ -1023,15 +1023,13 @@ url={http://chinacat.coastal.udel.edu/programs/funwave/funwave.html}
 
 @ARTICLE{BeckerHansboLarson2003,
   author = {Becker, R. and Hansbo, P. and Larson, M. G.},
-  title = {Energy norm a posteriori error estimation for discontinuous Galerkin
+  title = {Energy norm a posteriori error estimation for discontinuous {G}alerkin
 	methods},
   journal = {Computer Methods in Applied Mechanics and Engineering},
   year = {2003},
   volume = {192},
   pages = {723--733},
   number = {5-6},
-  file = {:BecHanLar2002.pdf:PDF},
-  owner = {massing},
   publisher = {Elsevier},
   timestamp = {2009.05.06}
 }
@@ -1045,9 +1043,6 @@ url={http://chinacat.coastal.udel.edu/programs/funwave/funwave.html}
   volume = {37},
   pages = {209--225},
   number = {2},
-  file = {:BecHanSten2003.pdf:PDF},
-  owner = {massing},
-  timestamp = {2009.05.06}
 }
 
 @ARTICLE{BeckerRannacher2001,
@@ -1461,8 +1456,8 @@ pages = {691}
 
 @ARTICLE{Brezzi1974,
   author = {F. Brezzi},
-  title = {On the Existence, Uniqueness and Approximation of Saddle-Point Problems
-	Arising from Lagrangian Multipliers},
+  title = {On the Existence, Uniqueness and Approximation of Saddle-Point
+  Problems Arising from {L}agrangian Multipliers},
   journal = {RAIRO Anal. Num\'er.},
   year = {1974},
   volume = {R--2},
@@ -1544,7 +1539,7 @@ pages = {691}
   author = {Didier X. P. Brochet and Dongmei Yang and Alessandro Di Maio and
 	W. Jonathan Lederer and Clara Franzini-Armstrong and Heping Cheng},
   title = {{C}a$^{2+}$ blinks: rapid nanoscopic store calcium signaling.},
-  journal = {Proc. Natl. Acad. Sci. U. S. A.},
+  journal = {Proc. Natl. Acad. Sci. U.S.A.},
   year = {2005},
   volume = {102},
   pages = {3099--3104},
@@ -1556,8 +1551,8 @@ pages = {691}
 
 @ARTICLE{BrooksHughes1982,
   author = {Brooks, Alexander N. and Hughes, Thomas J. R.},
-  title = {Streamline upwind/Petrov-Galerkin formulations for convection dominated
-	flows with particular emphasis on the incompressible Navier-Stokes
+  title = {Streamline upwind/{P}etrov--{G}alerkin formulations for convection dominated
+	flows with particular emphasis on the incompressible {N}avier--{S}tokes
 	equations},
   journal = {Computer Methods in Applied Mechanics and Engineering},
   year = {1982},
@@ -2139,7 +2134,7 @@ pages = {691}
 
 @ARTICLE{CrouzeixFalk1989,
   author = {Crouzeix, M. and Falk, Richard S.},
-  title = {Nonconforming Finite Elments for the Stokes Problem},
+  title = {Nonconforming Finite Elements for the {S}tokes Problem},
   journal = {Mathematics of Computation},
   year = {1989},
   volume = {52},
@@ -2165,7 +2160,7 @@ pages = {691}
 @ARTICLE{CrouzeixRaviart1973a,
   author = {M. Crouzeix and P. A. Raviart},
   title = {Conforming and Nonconforming Finite Element Methods for Solving the
-	Stationary Stokes Equations},
+	Stationary {S}tokes Equations},
   journal = {RAIRO Anal. Num\'er.},
   year = {1973},
   volume = {7},
@@ -3452,7 +3447,7 @@ pages = {691}
 
 @ARTICLE{HansboLarson2002,
   author = {Hansbo, P. and Larson, M. G.},
-  title = {Discontinuous Galerkin methods for incompressible and nearly incompressible
+  title = {Discontinuous {G}alerkin methods for incompressible and nearly incompressible
 	elasticity by Nitsche's metho}
 }
 
@@ -3626,7 +3621,7 @@ pages = {691}
 
 @ARTICLE{HieberKoumoutsakos2005,
   author = {Simone E. Hieber and Petros Koumoutsakos},
-  title = {A Lagrangian particle level set method},
+  title = {A {L}agrangian particle level set method},
   journal = {J. Comput. Phys.},
   year = {2005},
   volume = {210},
@@ -3711,7 +3706,7 @@ pages = {691}
 @ARTICLE{Hoffman2009,
   author = {Johan Hoffman},
   title = {Efficient computation of mean drag for the subcritical flow past
-	a circular cylinder using General Galerkin G2},
+	a circular cylinder using General {G}alerkin {G2}},
   journal = {Int. J. Numer. Meth. Fluids},
   year = {2009}
 }
@@ -3728,7 +3723,7 @@ pages = {691}
 @ARTICLE{Hoffman2006a,
   author = {Johan Hoffman},
   title = {Computation of turbulent flow past bluff bodies using adaptive General
-	Galerkin methods: drag crisis and turbulent Euler solutions},
+	{G}alerkin methods: drag crisis and turbulent {E}uler solutions},
   journal = {Comput. Mech.},
   year = {2006},
   volume = {38},
@@ -3783,7 +3778,7 @@ Forum
 
 @article{Hansbo2000,
 author = "P. Hansbo",
-title = "A Crank-Nicolson type space-time finite element method for computing
+title = "A {Crank--{N}icolson type space-time finite element method for computing
 on moving meshes",
 journal = "Journal of Computational Physics",
 volume = 159,
@@ -3793,7 +3788,7 @@ year = 2000
 
 @ARTICLE{HoffmanJohnson2008,
   author = {Johan Hoffman and Claes Johnson},
-  title = {Blowup of the incompressible Euler equations},
+  title = {Blowup of the incompressible {E}uler equations},
   journal = {BIT Numerical Mathematics},
   year = {2008},
   volume = {48},
@@ -3802,7 +3797,7 @@ year = 2000
 
 @ARTICLE{HoffmanJohnson2008a,
   author = {Johan Hoffman and Claes Johnson},
-  title = {Resolution of d'Alembert's Paradox},
+  title = {Resolution of d'{A}lembert's Paradox},
   journal = {J. Math. Fluid Mech.},
   year = {2008},
   volume = {Online First December 2008}
@@ -3928,7 +3923,7 @@ year = "1981"
 
 @article{GilesSuli2002,
 author = "M. Giles and E. S{\" u}li",
-title = "Adjoint methods for PDEs: a posteriori error analysis and postprocessing by duality",
+title = "Adjoint methods for {PDE}s: a posteriori error analysis and postprocessing by duality",
 journal = "Acta Numer.",
 volume = 11,
 pages = {145-236},
@@ -4599,7 +4594,7 @@ year = "2006"
 
 @ARTICLE{KimMoin1985,
   author = {J. Kim and P. Moin},
-  title = {Application of a fractional-step method for Navier-Stokes equations},
+  title = {Application of a fractional-step method for {N}avier--{S}tokes equations},
   journal = {J. Comput. Phys.},
   year = {1985},
   volume = {59},
@@ -5147,8 +5142,8 @@ author = {Hans Petter Langtangen and Geir Pedersen}
 
 @ARTICLE{LarsonNiklasson2004,
   author = {Larson, M.G. and Niklasson, A.J.},
-  title = {{Analysis of a family of discontinuous Galerkin methods for elliptic
-	problems: the one dimensional case}},
+  title = {Analysis of a family of discontinuous {G}alerkin methods for elliptic
+	problems: the one dimensional case},
   journal = {Numerische Mathematik},
   year = {2004},
   volume = {99},
@@ -6006,7 +6001,7 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
 
 @TECHREPORT{MalikZangHussaini1984,
   author = {M. R. Malik and T. R. Zang and M. Y. Hussaini},
-  title = {A spectral collocation method for the Navier Stokes equations},
+  title = {A spectral collocation method for the {N}avier--{S}tokes equations},
   institution = {NASA},
   year = {1984},
   number = {172365, ICASE report no. 84-19.}
@@ -6111,9 +6106,6 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
   year = {2003},
   editor = {H. P. Langtangen and A. Tveito}
 }
-
-
-
 
 @ARTICLE{MardalWinther11,
   author = {K.-A. Mardal and R. Winther},
@@ -6462,7 +6454,7 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
 }
 
 @misc{Nazarov2009,
-  title = {An adaptive finite element method for the compressible Euler equations},
+  title = {An adaptive finite element method for the compressible {E}uler equations},
   year = {2009},
   author = {M. Nazarov},
   note = {Licentiate Thesis},
@@ -7033,7 +7025,7 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
 
 @CONFERENCE{PrudhommeOdenRomkesEtAl2001,
   author = {Prudhomme, S. and Oden, J. and Romkes, A. and Carey, G.},
-  title = {On a a posteriori error estimator for the discontinuous galerkin
+  title = {On a a posteriori error estimator for the discontinuous {G}alerkin
 	method},
   booktitle = {DOD Users Group Meeting, Biloxi, Mississipi, June 19},
   year = {2001},
@@ -7703,7 +7695,7 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
 @ARTICLE{SimoArmero1994,
   author = {J. C. Simo and F. Armero},
   title = {Unconditional stability and long-term behavior of transient algorithms
-	for the incompressible Navier-Stokes and Euler equations},
+	for the incompressible {N}avier--{S}tokes and {E}uler equations},
   journal = {Computer Methods in Applied Mechanics and Engineering},
   year = {1994},
   volume = {111},
@@ -7997,7 +7989,7 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
 
 @ARTICLE{Temam1969,
   author = {R. Temam},
-  title = {Sur l'approximation de la solution des {\'{e}}quations de {Navier-Stokes}
+  title = {Sur l'approximation de la solution des {\'{e}}quations de {N}avier-{S}tokes
 	par la m{\'{e}}thode des pas fractionnaires},
   journal = {Arc. Ration. Mech. Anal.},
   year = {1969},
@@ -8097,7 +8089,7 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
   editor = {Anders Logg, Kent-Andre Mardal, Garth Wells},
   publisher = {Springer},
   title = {A Note on the Efficiency and Accuracy of Some Common Finite Element
-	Schemes for the Incompressible Navier--Stokes Equations},
+	Schemes for the Incompressible {N}avier--{S}tokes Equations},
   year = {2009}
 }
 
@@ -8225,10 +8217,6 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
   publisher = {Prentice Hall},
   year = {2007},
   author = {Versteeg, H. K. and Malalasekera, W. },
-  citeulike-article-id = {2816711},
-  keywords = {file-import-08-05-20},
-  posted-at = {2008-05-20 15:43:11},
-  priority = {2}
 }
 
 @ARTICLE{Verwer1996,
