--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3778,7 +3778,7 @@ Forum
 
 @article{Hansbo2000,
 author = "P. Hansbo",
-title = "A {Crank--{N}icolson type space-time finite element method for computing
+title = "A {C}rank--{N}icolson type space-time finite element method for computing
 on moving meshes",
 journal = "Journal of Computational Physics",
 volume = 159,
