--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1157,15 +1157,13 @@ pages = {691}
   author = {J. Bergh and J. L\"{o}fstr\"{o}m}
 }
 
-@ARTICLE{BernsteinMalkusOlsen1985,
-  author = {B. Bernstein and D. Malkus and E.T. Olsen},
-  title = {A finite element for incompressible plane flows of fluids with memory},
-  journal = {International Journal for Numerical Methods in Fluids },
-  year = {1985},
-  month = {January},
-  volume = {5},
-  issue = {1},
-  pages = {43 -- 70}
+@INBOOK{Malkus2000,
+  author = {D. S. Malkus},
+  chapter = {4.II},
+  title = {The Finite Element Method},
+  year = {2000},
+  publisher = {Dover},
+  pages = {276 -- 303}
 }
 
 @BOOK{Bers2001,
@@ -6426,20 +6424,20 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
   journal = {The Lancet},
   year = {1997},
   volume = {349},
-  pages = {1498 - 1504},
+  pages = {1498 --1504},
   number = {9064},
   url = {http://dx.doi.org/10.1016/S0140-6736(96)07492-2},
 }
 
-@ARTICLE{NagtegaalDeJong1981,
-  author = {J.C. Nagtegaal and J.E. {De Jong}},
-  title = {Some computational aspects of elastic-plastic large strain analysis},
-  journal = {International Journal for Numerical Methods in Engineering},
-  year = {1981},
-  month = {January},
-  volume = {17},
-  issue = {1},
-  pages = {15--41}
+@ARTICLE{NagtegaalDeJong1974,
+  author = {J. C. Nagtegaal and D. M. Parks and J. R. Rice},
+  title = {On numerically accurate finite element solutions in the fully plastic range},
+  journal = {Computer Methods in Applied Mechanics and Engineering},
+  volume = {4},
+  number = {2},
+  pages = {153--177},
+  year = {1974},
+  url = {http://dx.doi.org/10.1016/0045-7825(74)90032-2},
 }
 
 @ARTICLE{NakaoKinoshita2008,
@@ -8030,12 +8028,13 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
 
 @ARTICLE{TerrelScott2008,
   author = {Andy R. Terrel and L. Ridgway Scott and Matthew G. Knepley and Robert C. Kirby},
-  title = {Automated {FEM} discretizations for the {S}tokes equation.},
+  title = {Automated {FEM} discretizations for the {S}tokes equation},
   journal = {BIT Numerical Mathematics},
   year = {2008},
-  month = {July},
   volume = {48},
-  pages = {389--404}
+  number = {2},
+  pages = {389--404},
+  url = {http://dx.doi.org/10.1007/s10543-008-0178-8}
 }
 
 @ARTICLE{TezduyarPark1986,
