Add final missing author affiliations

--- a/backmatter/authors.tex
+++ b/backmatter/authors.tex
@@ -1,5 +1,3 @@
-
-
 \emph{The following authors have contributed to this book.}
 
 \vspace{1cm}
@@ -20,7 +18,11 @@
               \ref{chap:alnes-3} and
               \ref{chap:wilbers}}
 
-\fenicsauthor{Stuart R. Clark}{}{}{}{}
+\fenicsauthor{Stuart R. Clark}
+             {stuart@simula.no}
+             {Computational Geoscience Department at Simula Research Laboratory, Norway}
+             {This work was funded by a research grant from Statoil.}
+             {Chapter \ref{chap:vynnytska}}
 
 \fenicsauthor{David B. Davidson}
              {davidson@sun.ac.za}
@@ -68,19 +70,19 @@
              {jhoffman@csc.kth.se}
              {School of Computer Science and Communication, KTH, Sweden}
              {}
-             {Chapters \ref{chap:hoffman-1} \ref{chap:hoffman-2}}
+             {Chapters \ref{chap:hoffman-1} and \ref{chap:hoffman-2}}
 
 \fenicsauthor{Johan Jansson}
              {jjan@csc.kth.se}
              {School of Computer Science and Communication, KTH, Sweden}
              {}
-             {Chapters \ref{chap:hoffman-1} \ref{chap:hoffman-2}}
+             {Chapters \ref{chap:hoffman-1} and \ref{chap:hoffman-2}}
 
 \fenicsauthor{Niclas Jansson}
              {njansson@csc.kth.se}
              {School of Computer Science and Communication, KTH, Sweden}
              {}
-             {Chapters \ref{chap:hoffman-1} \ref{chap:hoffman-2}}
+             {Chapters \ref{chap:hoffman-1} and \ref{chap:hoffman-2}}
 
 \fenicsauthor{Claes Johnson}
              {cgjoh@csc.kth.se}
@@ -121,7 +123,7 @@
              {This work is supported by grants from the National Research
               Foundation, South Africa, as well as the Centre for High Performance
               Computing, South Africa as part of a flagship project.}
-              {Chapter \ref{chap:lezar}}
+             {Chapter \ref{chap:lezar}}
 
 \fenicsauthor{Svein Linge}
              {sveinlin@simula.no}
@@ -178,7 +180,7 @@
               \ref{chap:kirby-1}, \ref{chap:logg-3}, \ref{chap:wilbers},
               \ref{chap:alnes-3}, \ref{chap:alnes-2}, \ref{chap:mardal-2},
               \ref{chap:kvs-1}, \ref{chap:mortensen}, \ref{chap:kvs-2},
-              \ref{chap:hentschel}, \ref{chap:mardal-4}}
+              \ref{chap:hentschel} and \ref{chap:mardal-4}}
 
 \fenicsauthor{Mikael Mortensen}
              {Mikael.Mortensen@ffi.no}
@@ -240,7 +242,7 @@
               the Center for Biomedical Computing at Simula Research
               Laboratory.}
              {Chapters
-              \ref{chap:logg-1}, \ref{chap:kirby-6}, \ref{chap:rognes}, \ref{chap:vynnytska}}
+              \ref{chap:logg-1}, \ref{chap:kirby-6}, \ref{chap:rognes} and \ref{chap:vynnytska}}
 
 \fenicsauthor{Hans Joachim Schroll}
              {achim@imada.sdu.dk}
@@ -270,16 +272,13 @@
              {Chapter \ref{chap:selim}}
 
 \fenicsauthor{Susanne St\o{}le-Hentschel}
-             {susanne.stole.hentschel@dnv.com} 
-             {Det Norske Veritas AS}  
+             {susanne.stole.hentschel@dnv.com}
+             {Det Norske Veritas AS}
              {This work is supported by a Center of Excellence
               grant from the Research Council of Norway to the Center
               for Biomedical Computing at Simula Research
               Laboratory.}
              {Chapter \ref{chap:hentschel}}
-
-
-
 
 \fenicsauthor{Andy R. Terrel}
              {andy.terrel@gmail.com}
@@ -304,13 +303,19 @@
               Biomedical Computing at Simula Research Laboratory.}
              {Chapters \ref{chap:kvs-1} and \ref{chap:kvs-2}}
 
-\fenicsauthor{Lyudmyla Vynnytska}{}{}{}{}
+\fenicsauthor{Lyudmyla Vynnytska}
+             {lyudav@simula.no}
+             {Computational Geoscience Department at Simula Research Laboratory, Norway}
+             {This work was funded by a research grant from Statoil.}
+             {Chapter \ref{chap:vynnytska}}
 
 \fenicsauthor{Garth N. Wells}
              {gnw20@cam.ac.uk}
              {Department of Enginering, University of Cambridge, United Kingdom}
              {}
-             {}
+             {Chapters \ref{chap:logg-1}, \ref{chap:logg-2}, \ref{chap:logg-3},
+              \ref{chap:nikbakht}, \ref{chap:oelgaard-1}, \ref{chap:oelgaard-2},
+              \ref{chap:terrel} and \ref{chap:wells}}
 
 \fenicsauthor{Ilmar M. Wilbers}
              {ilmarw@simula.no}
