Include [terrel] (with minor fixes)

--- a/TODO
+++ b/TODO
@@ -4,8 +4,6 @@ Things to check
 * Add items to index, should be used in all chapters
 * Problem with numbers in Palatino, 0 looks like o. See FFC chapter
   for an example ("Stage 0").
-* Fix wrapping of chapter titles
-* Use {figure*} where suitable
 * Use of i for local indices and I for global indices
 * Check use of \stackrel{+}{=}
 * Check use of : or , before formula
@@ -15,7 +13,6 @@ Things to check
   for books too when available
 * Add some space around definition environment
 * Make footnotes full page
-* Full names in author list
 * Collect code examples and add references
 * Use of "..." vs ``...''
 * Add labels "C++ code", "Python code", "Bash code" to code
@@ -26,6 +23,7 @@ Things to check
     \partial_n  = normal derivative
     \delta_{ij} = Kronecker delta
 * Use \Gamma_{\mathrm{D}} and \Gamma_{\mathrm{N}}
+* \emph{a~posteriori} always?
 * Check indentation in code examples:
 \begin{c++}
 stuff
@@ -46,3 +44,4 @@ Things to discuss
   name. Looks strange when two packages are referenced together
   and one of them is written as the name of the package and the other
   the name of the author.
+* Full names in author list
