--- a/book.tex
+++ b/book.tex
@@ -78,8 +78,7 @@
 
 \part{Applications}
 
-%\fenicsinput{terrel}
-\input{unfinished/tmp-terrel/chapter.tex}
+\fenicsinput{terrel}
 \fenicsinput{kvs-1}
 \fenicsinput{mortensen}
 \fenicsinput{hoffman-1}
