--- a/book.tex
+++ b/book.tex
@@ -111,6 +111,7 @@
 % Bibliography
 \bibliography{bibliography}
 \bibliographystyle{abbrvnat}
+\addcontentsline{toc}{chapter}{Bibliography}
 
 % End full width
 \end{fullwidth}
