--- a/book.tex
+++ b/book.tex
@@ -117,8 +117,8 @@
 \end{fullwidth}
 
 % Index
-%\newcommand{\icode}[1]{\texttt{#1}} % seems necessary
-%\printindex
+\newcommand{\icode}[1]{\texttt{#1}} % seems necessary
+\printindex
 %------------------------------------------------------------------------------
 \end{document}
 %------------------------------------------------------------------------------
