--- a/book.tex
+++ b/book.tex
@@ -43,7 +43,7 @@
 %------------------------------------------------------------------------------
 % For testing, uncomment
 
-%\fenicsinput{oelgaard-2}
+%\fenicsinput{kirby-8}
 %\input{backmatter/authors}
 %\input{backmatter/fdl-1.3}
 %\bibliography{bibliography}\bibliographystyle{abbrvnat}\end{fullwidth}\end{document}
