Add email addresses to list of proofreading authors

--- a/backmatter/authors.tex
+++ b/backmatter/authors.tex
@@ -35,7 +35,8 @@
               Computing, South Africa as part of a flagship project.}
              {Chapter \ref{chap:lezar}}
 
-\fenicsauthor{Rodrigo Vilela De Abreu}{rvda@csc.kth.se}
+\fenicsauthor{Rodrigo Vilela De Abreu}
+             {rvda@csc.kth.se}
              {School of Computer Science and Communication, KTH, Sweden}
              {}
              {Chapter \ref{chap:hoffman-1}}
