Add TODO point.

--- a/TODO
+++ b/TODO
@@ -45,3 +45,4 @@ Things to discuss
   and one of them is written as the name of the package and the other
   the name of the author.
 * Full names in author list
+* Consistent use of single (') or double (") quotes.
