Some .bib fixes

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2060,56 +2060,12 @@ pages = {691}
 
 @ARTICLE{Dorfler1996,
   author = {D\"{o}rfler, W.},
-  title = {A convergent adaptive algorithm for Poisson's equation},
+  title = {A convergent adaptive algorithm for {P}oisson's equation},
   journal = {SIAM Journal on Numerical Analysis},
   year = {1996},
   volume = {33},
   pages = {1106--1124},
   number = {3},
-  publisher = {JSTOR}
-}
-
-@ARTICLE{DahlNygaard1965,
-  author = {O.-J. Dahl and K. Nygaard},
-  title = {SIMULA---A language for programming and description of discrete event
-	systems. Introduction and user's manual.},
-  journal = {NCC Publ.},
-  year = {1965},
-  number = {11},
-  owner = {logg},
-  timestamp = {2009.06.06}
-}
-
-@PHDTHESIS{Dahlquist1958,
-  author = {G. Dahlquist },
-  title = {Stability and Error Bounds in the Numerical Integration of Ordinary
-	Differential Equations},
-  school = {Stockholm University},
-  year = {1958},
-  owner = {logg},
-  timestamp = {2009.06.06}
-}
-
-@ARTICLE{DashDaripa2002,
-  author = {Dash, Ranjan K. and Daripa, Prabir},
-  title = {Analytical and numerical studies of a singularly perturbed {B}oussinesq
-	equation},
-  journal = {Appl. Math. Comput.},
-  year = {2002},
-  volume = {126},
-  pages = {1--30},
-  number = {1}
-}
-
-@ARTICLE{Dauge1989,
-  author = {Dauge, M.},
-  title = {Stationary {S}tokes and {N}avier-{S}tokes systems on two- or three-dimensional
-	domains with corners. {I}. {L}inearized equations},
-  journal = {SIAM Journal on Mathematical Analysis},
-  year = {1989},
-  volume = {20},
-  pages = {74--97},
-  number = {1}
 }
 
 @BOOK{Davidson2011,
@@ -4793,7 +4749,7 @@ author = {Hans Petter Langtangen and Geir Pedersen}
   title = {Using {D}iffpack from {P}ython Scripts},
   publisher = {Springer-Verlag},
   year = {2003},
-  editor = {Langtangen, H.P. and Tveito, A.},
+  editor = {Langtangen, H. P. and Tveito, A.},
   author = {Langtangen, H. P. and Mardal, K.-A},
   series = {Lecture Notes in Computational Science and Engineering},
   booktitle = {Advanced Topics in Computational Partial Differential Equations -
@@ -4808,36 +4764,6 @@ author = {Hans Petter Langtangen and Geir Pedersen}
   volume = {25},
   pages = {1125-1146},
   number = {8}
-}
-
-@ARTICLE{LarsonBengzon2008,
-  author = {Larson, M.G. and Bengzon, F.},
-  title = {Adaptive finite element approximation of multiphysics problems},
-  journal = {Communications in Numerical Methods in Engineering},
-  year = {2008},
-  volume = {24},
-  number = {6},
-}
-
-@ARTICLE{LarsonNiklasson2004,
-  author = {Larson, M.G. and Niklasson, A.J.},
-  title = {Analysis of a family of discontinuous {G}alerkin methods for elliptic
-	problems: the one dimensional case},
-  journal = {Numerische Mathematik},
-  year = {2004},
-  volume = {99},
-  pages = {113--130},
-  number = {1},
-}
-
-@ARTICLE{LarssonHansboRunesson2002,
-  author = {Larsson, F. and Hansbo, P. and Runesson, K.},
-  title = {Strategies for computing goal-oriented \emph{a posteriori} error measures
-	in non-linear elasticity},
-  journal = {International Journal for Numerical Methods in Engineering},
-  year = {2002},
-  volume = {55},
-  number = {8},
 }
 
 @ARTICLE{LascauxLesaint1975,
@@ -5066,18 +4992,6 @@ author = {Hans Petter Langtangen and Geir Pedersen}
   pages = {168--173}
 }
 
-@ARTICLE{LonsingVerfurth2004,
-  author = {Lonsing, M. and Verf{\"u}rth, R.},
-  title = {A posteriori error estimators for mixed finite element methods in
-	linear elasticity},
-  journal = {Numerische Mathematik},
-  year = {2004},
-  volume = {97},
-  pages = {757--778},
-  number = {4},
-  publisher = {Springer}
-}
-
 @phdthesis{Lopes2007,
   author = {N. Lopes},
   title = {{R}elat\'{o}rio do Curso de Forma\c{c}\~{a}o avan\c{c}ada:
@@ -5167,7 +5081,6 @@ author = {Hans Petter Langtangen and Geir Pedersen}
   volume = {17},
   pages = {237--256},
   number = {3},
-  issn = {1019-7168}
 }
 
 @misc{LynettLiu2004,
@@ -8332,8 +8245,8 @@ title = {Survival times of subducted slab remnants in numerical models
 of mantle flow},
 journal = {Earth and Planetary Science Letters},
 volume = {260},
-number = {1-2},
-pages = {23 - 36},
+number = {1--2},
+pages = {23--36},
 year = {2007},
 note = {},
 issn = {0012-821X},
