--- a/TODO
+++ b/TODO
@@ -46,3 +46,4 @@ Things to discuss
   the name of the author.
 * Full names in author list
 * Consistent use of single (') or double (") quotes.
+* How to write the convective term in NS: with or without \cdot
