Add oelgaard-1 tp unfinsihed.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,6 +1,31 @@
 % This file was created with JabRef 2.6.
 % Encoding: UTF8
 
+@article{SimoTaylor1985,
+  title={Consistent tangent operators for rate-independent elastoplasticity},
+  author={Simo, J. C. and Taylor, R. L.},
+  journal={Computer Methods in Applied Mechanics and Engineering},
+  volume={48},
+  number={1},
+  pages={101--118},
+  year={1985},
+  url = {http://dx.doi.org/10.1016/0045-7825(85)90070-2}
+}
+
+@book{Lubliner2008,
+  title={Plasticity Theory},
+  author={J. Lubliner},
+  year={2008},
+  publisher={Dover Publications}
+}
+
+@book{Bonet1997,
+  title={Nonlinear Continuum Mechanics for Finite Element Analysis},
+  author={Bonet, J. and Wood, R. D.},
+  year={1997},
+  publisher={Cambridge University Press}
+}
+
 @ARTICLE{SelimLogg2011a,
   author = {K. Selim and A. Logg and H. Narayanan and M. G. Larson},
   title = {An adaptive finite element method for fluid--structure interaction},
