--- a/book.tex
+++ b/book.tex
@@ -111,7 +111,7 @@
 % Bibliography
 \bibliography{bibliography}
 \bibliographystyle{abbrvnat}
-\addcontentsline{toc}{chapter}{Bibliography}
+\addcontentsline{toc}{chapter}{References}
 
 % End full width
 \end{fullwidth}
