Add title to test book.

--- a/book_test.tex
+++ b/book_test.tex
@@ -3,10 +3,10 @@
 
 % Book metadata
 %\title{Automated\\ \noindent Scientific\\ \noindent Computing}
-%\title{Automated Solution of \\
-%       Differential Equations by \\
-%       the Finite Element Method}
-%\author[The FEniCS Project]{Logg, Mardal, Wells (Eds.)}
+\title{Automated Solution of \\
+       Differential Equations by \\
+       the Finite Element Method}
+\author{Logg, Mardal, Wells (Eds.)}
 %\publisher{Springer-Verlag}
 
 % FIXME: Input package somewhere else
@@ -22,7 +22,7 @@
 %\frontmatter
 
 % Title page
-%\maketitle
+\maketitle
 
 % Copyright page
 %\input{frontmatter/copyright}
