--- a/book_test.tex
+++ b/book_test.tex
@@ -25,7 +25,7 @@
 \maketitle
 
 % Copyright page
-%\input{frontmatter/copyright}
+\input{frontmatter/copyright}
 
 % Start full width
 %\begin{fullwidth}
