--- a/book_test.tex
+++ b/book_test.tex
@@ -11,8 +11,8 @@
 
 % FIXME: Input package somewhere else
 % Generate index
-%\usepackage{makeidx}
-%\makeindex
+\usepackage{makeidx}
+\makeindex
 
 %------------------------------------------------------------------------------
 % Begin document
@@ -27,9 +27,6 @@
 % Copyright page
 \input{frontmatter/copyright}
 
-% Start full width
-%\begin{fullwidth}
-
 % Contents
 \tableofcontents
 %\listoffigures
@@ -37,17 +34,9 @@
 
 %------------------------------------------------------------------------------
 % Start main matter
-%\mainmatter
+\mainmatter
 
 % Chapters
-
-%------------------------------------------------------------------------------
-% For testing, uncomment
-
-%\fenicsinput{kirby-8}
-%\input{backmatter/authors}
-%\input{backmatter/fdl-1.3}
-%\bibliography{bibliography}\bibliographystyle{abbrvnat}\end{fullwidth}\end{document}
 
 %------------------------------------------------------------------------------
 
@@ -58,68 +47,65 @@
 
 \fenicsinput{kirby-7}
 \fenicsinput{kirby-6}
-%\fenicsinput{kirby-1}
-%\fenicsinput{kirby-5}
-%\fenicsinput{logg-3}
-%\fenicsinput{oelgaard-2}
-%\fenicsinput{kirby-8}
-%\fenicsinput{kirby-4}
+\fenicsinput{kirby-1}
+\fenicsinput{kirby-5}
+\fenicsinput{logg-3}
+\fenicsinput{oelgaard-2}
+\fenicsinput{kirby-8}
+\fenicsinput{kirby-4}
 
 \part{Implementation}
 
 \fenicsinput{logg-2}
-%\fenicsinput{logg-1}
-%\fenicsinput{kirby-3}
-%\fenicsinput{kirby-2}
-%\fenicsinput{wilbers}
-%\fenicsinput{alnes-3}
-%\fenicsinput{alnes-2}
-%\fenicsinput{alnes-1}
-%\fenicsinput{hoffman-2}
-%\fenicsinput{mardal-2}
+\fenicsinput{logg-1}
+\fenicsinput{kirby-3}
+\fenicsinput{kirby-2}
+\fenicsinput{wilbers}
+\fenicsinput{alnes-3}
+\fenicsinput{alnes-2}
+\fenicsinput{alnes-1}
+\fenicsinput{hoffman-2}
+\fenicsinput{mardal-2}
 
 \part{Applications}
 
 \fenicsinput{terrel}
-%\fenicsinput{kvs-1}
-%\fenicsinput{mortensen}
-%\fenicsinput{hoffman-1}
-%\fenicsinput{selim}
+\fenicsinput{kvs-1}
+\fenicsinput{mortensen}
+\fenicsinput{hoffman-1}
+\fenicsinput{selim}
 %\fenicsinput{wells}
-%\input{unfinished/tmp-wells/chapter.tex}
-%\fenicsinput{lopes}
-%\fenicsinput{kvs-2}
-%\fenicsinput{hentschel}
-%\fenicsinput{narayanan}
+\input{unfinished/tmp-wells/chapter.tex}
+\fenicsinput{lopes}
+\fenicsinput{kvs-2}
+\fenicsinput{hentschel}
+\fenicsinput{narayanan}
 %%\fenicsinput{oelgaard-1}
-%\input{unfinished/oelgaard-1/chapter.tex}
-%\fenicsinput{nikbakht}
-%\fenicsinput{schroll}
-%\fenicsinput{vynnytska}
-%\fenicsinput{hake}
-%\fenicsinput{lezar}
-%\fenicsinput{mardal-4}
-%\fenicsinput{rognes}
+\input{unfinished/oelgaard-1/chapter.tex}
+\fenicsinput{nikbakht}
+\fenicsinput{schroll}
+\fenicsinput{vynnytska}
+\fenicsinput{hake}
+\fenicsinput{lezar}
+\fenicsinput{mardal-4}
+\fenicsinput{rognes}
 
 %------------------------------------------------------------------------------
+
 % Start backmatter
-%\backmatter
+\backmatter
 
 % List of authors
-%\input{backmatter/authors}
-%\input{backmatter/fdl-1.3}
+\input{backmatter/authors}
+\input{backmatter/fdl-1.3}
 
 % Bibliography
 \bibliography{bibliography}
 \bibliographystyle{abbrvnat}
 \addcontentsline{toc}{chapter}{References}
 
-% End full width
-%\end{fullwidth}
-
 % Index
-%\newcommand{\icode}[1]{\texttt{#1}} % seems necessary
-%\printindex
+\printindex
 %------------------------------------------------------------------------------
 \end{document}
 %------------------------------------------------------------------------------
